@@ -7,6 +7,10 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+July 22 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Score system simplified
+	
 July 15 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Removed some ambiguous material definitions
